--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 batch_size: 512
 epochs: 80
 eval_every_n_epochs: 1
-fine_tune_from: None
+fine_tune_from: /network/tmp1/bakhtias/Results/SimCLR/model/
 log_every_n_steps: 50
 weight_decay: 10e-6
 fp16_precision: False
@@ -13,9 +13,10 @@ model:
 dataset:
   s: 1
   input_shape: (96,96,3)
-  num_workers: 0
+  num_workers: 30
   valid_size: 0.05
 
 loss:
   temperature: 0.5
   use_cosine_similarity: True
+
